# learn-sql-model

./: .gitignore  .learn-sql-model-copier-answers.yml  .pyflyby  Dockerfile  Dockerfile.dev  README.md  alembic.ini  client.py  client_sender.py  database.db  docker-compose.yml  dockerfile-dev  fly.toml  markata.toml  pyproject.toml  tmp.py
.github/workflows/: release.yml
learn_sql_model/: __main__.py  api.py  config.py  console.py  er_diagram.py  models.py  optional.py
learn_sql_model/api/: app.py  hero.py  new.py  user.py  websocket.py  websocket_connection_manager.py
learn_sql_model/cli/: api.py  app.py  common.py  config.py  dashboard.py  hero.py  model.py  model_app.py  new.py  tui.py
learn_sql_model/factories/: hero.py  new.py  pet.py
learn_sql_model/game/: game.py  light.py  map.py  menu.py  player.py
learn_sql_model/models/: fast_model.py  hero.py  new.py  pet.py
learn_sql_model/tui/: app.py
migrations/: env.py  script.py.mako
migrations/versions/: 19d198151caf_add_shoe_size.py  20da26039edf_name_the_pet.py  29ab77485a4d_new_attribute.py  2a221363b5f8_init.py  3555f61aaa79_add_x_and_y.py  3555f61aaa79_er_diagram.md  44fbe5f1a689_new.py  79972ec5f79d_er_diagram.md  79972ec5f79d_int.py  a1cd0a1947be_add_hero_lighting.py  a1cd0a1947be_er_diagram.md  a9bb6625c57b_add_birthday.py  c79214cdc7b3_add_hero_size.py  c79214cdc7b3_er_diagram.md  c8516c888495_init.py  d79dd8e699d1_add_hero_flashlight_angle.py  d79dd8e699d1_er_diagram.md  e1af975310a1_add_hero_flashlight_angle.py  e1af975310a1_er_diagram.md  e26398d96dd0_add_x_y_size.py  fe841f5746e5_initial_migration.py
templates/: api.py
templates/model/: .pyflyby-{{modelname.lower()}}.jinja  copier.yml
templates/model/learn_sql_model/api/: {{modelname.lower()}}.py.jinja
templates/model/learn_sql_model/cli/: {{modelname.lower()}}.py.jinja
templates/model/learn_sql_model/factories/: {{modelname.lower()}}.py.jinja
templates/model/learn_sql_model/models/: {{modelname.lower()}}.py.jinja
templates/model/tests/: {{modelname.lower()}}.py.jinja
tests/: test_cli_app.py  test_console.py  test_hero.py
